--- a/Pong/Views/Home/Index.cshtml
+++ b/Pong/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Pong";
+    ViewBag.Title = "PingPong";
 }
 
 <script src="@Url.Content("~/Scripts/Pong.js")" type="text/javascript"></script>
